@@ -49,7 +49,7 @@ DLVHEX_NAMESPACE_BEGIN
 
 
 ProgramCtx::ProgramCtx():
-		maxint(0)
+		maxint(0),nASToBeReturned(0)
 {
 }
 
