@@ -137,6 +137,7 @@ printUsage(std::ostream &out, const char* whoAmI, bool full)
   out << "     --               Parse from stdin." << std::endl
       << " -s, --silent         Do not display anything than the actual result." << std::endl
       << "     --mlp            Use dlvhex+mlp solver (modular nonmonotonic logic programs)" << std::endl
+      << "     --n=<n>          To be used together with --mlp option to restrict the number of answer sets returned (n=0 return all)" << std::endl
     //        << "--strongsafety     Check rules also for strong safety." << std::endl
       << " -p, --plugindir=DIR  Specify additional directory where to look for plugin" << std::endl
       << "                      libraries (additionally to the installation plugin-dir" << std::endl
@@ -292,6 +293,7 @@ int main(int argc, char *argv[])
   pctx.config.setOption("KeepAuxiliaryPredicates",0);
   pctx.config.setOption("NoFacts",0);
   pctx.config.setOption("MLP", 0);
+  pctx.config.setOption("NMLP", 0);
 
 	// defaults of main
 	Config config;
@@ -394,7 +396,9 @@ int main(int argc, char *argv[])
 
 			// solve mlp
 			//rmv. std::cout << "before mlpSolver" << std::endl;
+			pctx.nASToBeReturned = pctx.config.getOption("NMLP");
 			pctx.mlpSolver();
+			
 			//rmv. std::cout << "after mlpSolver" << std::endl;
 		  }
 
@@ -533,6 +537,7 @@ void processOptionsPrePlugin(
 		{ "keepauxpreds", no_argument, &longid, 11 },
 		{ "nofacts", no_argument, &longid, 12 },
 		{ "mlp", no_argument, &longid, 13 },
+		{ "n", required_argument, &longid, 14 },
 		{ NULL, 0, NULL, 0 }
 	};
 
@@ -757,6 +762,9 @@ void processOptionsPrePlugin(
 					break;
 				case 13:
 					pctx.config.setOption("MLP",1);
+					break;
+				case 14:
+					pctx.config.setOption("NMLP",atoi(optarg));
 					break;
 				}
 			break;
